<resources>
    <string name="app_name">HawFarm</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="send">SEND</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="hawkers_name">Hawkers Name</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="order_id">Order ID</string>
    <string name="product_type">Product Type</string>
    <string name="seller_name">Seller Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="product_name">Product Name</string>
    <string name="country_prompt">country_prompt</string>
    <string name="item_total">Item Total</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="country_arrays">
        <item>250gm</item>
        <item>500gm</item>
        <item>1 Killo</item>
    </string-array>
</resources>
