<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<ImageView
            android:id="@+id/company_logo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/hawfarm_nameplate_1" />--> <!--center horizontal gravity-->

        <RelativeLayout
            android:id="@+id/profile_back"
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#FFF" />
            </LinearLayout>

            <!-- Image View -->
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/input_profile_submit"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_image"
                app:civ_border="true"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="1dp"
                app:civ_shadow_radius="10" />
        </RelativeLayout>

        <TextView
            android:id="@+id/join_us_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_back"
            android:gravity="center"
            android:text="Join Us"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/sign_up_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/join_us_text"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/touchanim"
            app:cardCornerRadius="5dp"
            app:contentPadding="10dp"
            tools:targetApi="lollipop">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <!--  Name Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>

                <!-- Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/mo_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pin_code"
                        android:inputType="numberDecimal"
                        android:maxLength="6" />
                </android.support.design.widget.TextInputLayout>

                <!-- Signup Button -->
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/button_style"
                    android:padding="12dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/sign_up" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_cardview"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="50dp"
            android:background="@drawable/back_to_login_button"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="Log In" />
    </RelativeLayout>
</ScrollView>