<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".LogInActivity"
    android:screenOrientation="portrait" >

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="200dp"
        android:src="@drawable/hawfarm_nameplate_1" />

    <android.support.v7.widget.CardView
        android:id="@+id/login_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="80dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp"
        android:stateListAnimator="@anim/frombottom"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_style"
                android:textColor="#FFF"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/login" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/link_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:background="@drawable/register_button"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:textColor="#FFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp" />
</RelativeLayout>